// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Project/View default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-eerKOB kCRaGL"
  >
    <div>
      <div
        className="sc-gisBJw kiKCgt"
      >
        <div
          style={
            Object {
              "alignItems": "flex-start",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": "18px",
              "width": "100%",
            }
          }
        >
          <div>
            <div
              className="sc-kjoXOD hpTAeq"
            >
              <h2
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                Project
              </h2>
              <h1
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              >
                Project Name
              </h1>
            </div>
          </div>
          <button
            disabled={false}
            id="topHeaderOpenMenuBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": 6,
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#000",
              "color": "#FFF",
              "maxWidth": null,
              "minHeight": "100vh",
              "padding": "18px 20px 27px",
              "position": "fixed",
              "right": 0,
              "textAlign": "left",
              "top": 0,
              "transform": "translateX(100%)",
              "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
              "visibility": 0,
              "width": "100%",
              "zIndex": 9999,
            }
          }
        >
          <div
            className="sc-cHGsZl bHiaRe"
          >
            <div
              className="sc-kjoXOD hpTAeq"
            >
              <h2
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                Project
              </h2>
              <h1
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              >
                Project Name
              </h1>
            </div>
          </div>
          <div
            className="sc-TOsTZ iUQrOT"
          >
            <ul
              className="sc-kgAjT sc-cJSrbW doKZeW"
            >
              <li
                className="sc-hmzhuo sc-frDJqD TGbH"
              >
                <a
                  href="/project/100/datasource"
                  id={null}
                  onClick={[Function]}
                >
                  Data Sources
                </a>
              </li>
            </ul>
            <ul
              className="sc-kgAjT sc-ksYbfQ iFxI"
            >
              <li
                className="sc-hmzhuo sc-kvZOFW ixXwCE"
              >
                <a
                  href="/project/edit/100"
                  id={null}
                  onClick={[Function]}
                >
                  Edit Project Settings
                </a>
              </li>
              <li
                className="sc-hmzhuo sc-kvZOFW ixXwCE"
                id={null}
                onClick={[Function]}
              >
                Delete Project
              </li>
              <li
                className="sc-hmzhuo sc-kvZOFW ixXwCE"
              >
                <a
                  href="/logout"
                  id={null}
                  onClick={[Function]}
                >
                  Log Out
                </a>
              </li>
            </ul>
          </div>
          <button
            disabled={false}
            id="topHeaderCloseMenuButton"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": "6px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="sc-hZSUBg VKktY"
      >
        <div
          className="sc-epnACN eSYYqU"
        >
          <div
            className="sc-iQNlJl kHKALF"
          >
            <a
              className="sc-bsbRJL gzXytr"
              href="/project/100"
              onClick={[Function]}
            >
              <span>
                Settings
              </span>
            </a>
          </div>
          <div
            className="sc-iQNlJl fuSGWJ"
          >
            <a
              className="sc-bsbRJL gzXytr"
              href="/project/100/datasource"
              onClick={[Function]}
            >
              <span>
                Sources
              </span>
            </a>
          </div>
          <div
            className="sc-iQNlJl fuSGWJ"
          >
            <a
              className="sc-bsbRJL gzXytr"
              href="/project/100/user"
              onClick={[Function]}
            >
              <span>
                Users
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        className="sc-emmjRN bNfkaf"
      >
        <ul
          className="sc-jzgbtB izoRtv"
        >
          <li
            className="sc-gJWqzi iuUsDq"
          >
            <div
              id="projectDataSources"
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderTop": "2px solid #FFF",
                  "color": "#FFF",
                  "cursor": "pointer",
                  "display": "flex",
                  "flexDirection": "column",
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "padding": "12px 14px 14px",
                }
              }
            >
              <div
                style={
                  Object {
                    "color": undefined,
                    "fontSize": "12px",
                    "marginBottom": "14px",
                  }
                }
              >
                <span
                  className="sc-rBLzX kmjjvp"
                >
                  Data Sources
                </span>
              </div>
              <span
                className="sc-bMvGRv bAmQmG"
                id="projectDataSourcesValue"
              >
                3
              </span>
            </div>
          </li>
          <li
            className="sc-gJWqzi iuUsDq"
          >
            <div
              id="projectUsers"
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderTop": "2px solid #FFF",
                  "color": "#FFF",
                  "cursor": "pointer",
                  "display": "flex",
                  "flexDirection": "column",
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "padding": "12px 14px 14px",
                }
              }
            >
              <div
                style={
                  Object {
                    "color": undefined,
                    "fontSize": "12px",
                    "marginBottom": "14px",
                  }
                }
              >
                <span
                  className="sc-rBLzX kmjjvp"
                >
                  Users
                </span>
              </div>
              <span
                className="sc-bMvGRv bAmQmG"
                id="projectUsersValue"
              >
                2
              </span>
            </div>
          </li>
        </ul>
        <ul
          className="sc-cpmLhU kuLRsk"
        >
          <li
            className="sc-dymIpo bKnZot"
            order={1}
          >
            <div
              className="sc-bnXvFD edggOR"
              id="fieldLastUpdated"
            >
              <span
                className="sc-gFaPwZ fLHPWQ"
                id="fieldLastUpdatedLabel"
              >
                Last Update
              </span>
              <span
                className="sc-fhYwyz fnihDs"
                id="fieldLastUpdatedValue"
              >
                3 months ago
              </span>
            </div>
          </li>
          <li
            className="sc-dymIpo cXCYal"
            order={3}
          >
            <div
              className="sc-bnXvFD edggOR"
              id="fieldStatus"
            >
              <span
                className="sc-gFaPwZ fLHPWQ"
                id="fieldStatusLabel"
              >
                Status
              </span>
              <span
                className="sc-fhYwyz fnihDs"
                id="fieldStatusValue"
              >
                Status
              </span>
            </div>
          </li>
          <li
            className="sc-dymIpo gcaVFP"
            order={5}
          >
            <div
              className="sc-bnXvFD edggOR"
              id="fieldOwner"
            >
              <span
                className="sc-gFaPwZ fLHPWQ"
                id="fieldOwnerLabel"
              >
                Owner
              </span>
              <span
                className="sc-fhYwyz fnihDs"
                id="fieldOwnerValue"
              >
                Firstname Lastname
              </span>
            </div>
          </li>
          <li
            className="sc-dymIpo hjEcTe"
            order={2}
          >
            <div
              className="sc-bnXvFD edggOR"
              id="fieldTitle"
            >
              <span
                className="sc-gFaPwZ fLHPWQ"
                id="fieldTitleLabel"
              >
                Title
              </span>
              <span
                className="sc-fhYwyz fnihDs"
                id="fieldTitleValue"
              >
                Project Name
              </span>
            </div>
          </li>
          <li
            className="sc-dymIpo fytqUD"
            order={4}
          >
            <div
              className="sc-bnXvFD edggOR"
              id="fieldDescription"
            >
              <span
                className="sc-gFaPwZ fLHPWQ"
                id="fieldDescriptionLabel"
              >
                Description
              </span>
              <span
                className="sc-fhYwyz fnihDs"
                id="fieldDescriptionValue"
              >
                Description
              </span>
            </div>
          </li>
          <li
            className="sc-dymIpo bplZNM"
            order={6}
          >
            <div
              className="sc-bnXvFD edggOR"
              id="fieldSlug"
            >
              <span
                className="sc-gFaPwZ fLHPWQ"
                id="fieldSlugLabel"
              >
                API
              </span>
              <span
                className="sc-fhYwyz fnihDs"
                id="fieldSlugValue"
              >
                schemacms/api/project_title
              </span>
            </div>
          </li>
        </ul>
      </div>
      <div
        className="sc-CtfFt grSJde"
      >
        <span
          className="sc-laTMn hEJgkH"
          id="deleteProjectDesktopBtn"
          onClick={[Function]}
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "14px",
            }
          }
        >
          <span>
            Delete Project
          </span>
        </span>
      </div>
    </div>
    <div
      className="sc-iwsKbI eQdjUy"
    >
      <div
        className="sc-gqjmRU fIKSOC"
      >
        <div
          className="sc-gZMcBi jSdIIC"
        >
          <button
            disabled={false}
            id="addProjectBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Project/View loading 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-eerKOB kCRaGL"
  >
    <div>
      <div
        className="sc-gisBJw kiKCgt"
      >
        <div
          style={
            Object {
              "alignItems": "flex-start",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": "18px",
              "width": "100%",
            }
          }
        >
          <div>
            <div
              className="sc-kjoXOD hpTAeq"
            >
              <h2
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                Project
              </h2>
              <h1
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              />
            </div>
          </div>
          <button
            disabled={false}
            id="topHeaderOpenMenuBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": 6,
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#000",
              "color": "#FFF",
              "maxWidth": null,
              "minHeight": "100vh",
              "padding": "18px 20px 27px",
              "position": "fixed",
              "right": 0,
              "textAlign": "left",
              "top": 0,
              "transform": "translateX(100%)",
              "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
              "visibility": 0,
              "width": "100%",
              "zIndex": 9999,
            }
          }
        >
          <div
            className="sc-cHGsZl bHiaRe"
          >
            <div
              className="sc-kjoXOD hpTAeq"
            >
              <h2
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                Project
              </h2>
              <h1
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-TOsTZ iUQrOT"
          >
            <ul
              className="sc-kgAjT sc-cJSrbW doKZeW"
            >
              <li
                className="sc-hmzhuo sc-frDJqD TGbH"
              >
                <a
                  href="/project/100/datasource"
                  id={null}
                  onClick={[Function]}
                >
                  Data Sources
                </a>
              </li>
            </ul>
            <ul
              className="sc-kgAjT sc-ksYbfQ iFxI"
            >
              <li
                className="sc-hmzhuo sc-kvZOFW ixXwCE"
              >
                <a
                  href="/project/edit/100"
                  id={null}
                  onClick={[Function]}
                >
                  Edit Project Settings
                </a>
              </li>
              <li
                className="sc-hmzhuo sc-kvZOFW ixXwCE"
                id={null}
                onClick={[Function]}
              >
                Delete Project
              </li>
              <li
                className="sc-hmzhuo sc-kvZOFW ixXwCE"
              >
                <a
                  href="/logout"
                  id={null}
                  onClick={[Function]}
                >
                  Log Out
                </a>
              </li>
            </ul>
          </div>
          <button
            disabled={false}
            id="topHeaderCloseMenuButton"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": "6px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="sc-hZSUBg VKktY"
      >
        <div
          className="sc-epnACN eSYYqU"
        >
          <div
            className="sc-iQNlJl kHKALF"
          >
            <a
              className="sc-bsbRJL gzXytr"
              href="/project/100"
              onClick={[Function]}
            >
              <span>
                Settings
              </span>
            </a>
          </div>
          <div
            className="sc-iQNlJl fuSGWJ"
          >
            <a
              className="sc-bsbRJL gzXytr"
              href="/project/100/datasource"
              onClick={[Function]}
            >
              <span>
                Sources
              </span>
            </a>
          </div>
          <div
            className="sc-iQNlJl fuSGWJ"
          >
            <a
              className="sc-bsbRJL gzXytr"
              href="/project/100/user"
              onClick={[Function]}
            >
              <span>
                Users
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        className="sc-hSdWYo bsJfYm"
      >
        <span>
          Loading...
        </span>
      </div>
      <div
        className="sc-CtfFt grSJde"
      >
        <span
          className="sc-laTMn hEJgkH"
          id="deleteProjectDesktopBtn"
          onClick={[Function]}
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "14px",
            }
          }
        >
          <span>
            Delete Project
          </span>
        </span>
      </div>
    </div>
    <div
      className="sc-iwsKbI eQdjUy"
    >
      <div
        className="sc-gqjmRU fIKSOC"
      >
        <div
          className="sc-gZMcBi jSdIIC"
        >
          <button
            disabled={false}
            id="addProjectBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
